tdf#129542 the control is already anchored to header/footer content

DisconnectFromLayout has unset its old anchor, if we don't insert
it somewhere then its old anchor is null and we crash eventually.

Seeing as we're already anchored into header/footer content, albeit only
in the first view of a header/footer, then allow reconnecting to layout
in that mode

Change-Id: I0be4d167ee7d7b932318a1318954bed0da3a4fc0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100686
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>